# chronopolis

./: .dockerignore  .pre-commit-config.yaml  AI_DISCLAIMER.md  README.md  docker-compose.yaml  manage.py  pyproject.toml
.docker/: Dockerfile.dev  Dockerfile.production
.github/: AGENTS.md  copilot-instructions.md
chronopolis/: asgi.py  settings.py  urls.py  wsgi.py
chronopolis/fate/: apps.py  models.py
chronopolis/fate/migrations/: 0001_initial.py
chronopolis/prometheus/: apps.py  enums.py  models.py  models.pyi
tests/prometheus/: test_enums.py
