[project]
name = "chronopolis"
version = "0.1.0"
description = "My own command center"
authors = [
    {name = "Nilton Teixeira",email = "9078708+niltonfrederico@users.noreply.github.com"}
]
license = {text = "AGPLv3"}
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "nicegui (>=3.8.0,<4.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "django-stubs (>=5.2.9,<6.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-env (>=1.6.0,<2.0.0)"
]
